--- a/index.html
+++ b/index.html
@@ -5,6 +5,24 @@
     <link rel="icon" type="image/png" href="site-icon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Harnish Mistry</title>
+    <meta
+      name="description"
+      content="Harnish Mistry is a frontend developer in Toronto, ON, focused on creating interactive web experiences and modern animations."
+    />
+
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://www.harrnish.com" />
+    <meta property="og:title" content="Harnish Mistry" />
+    <meta
+      property="og:description"
+      content="Harnish Mistry is a frontend developer in Toronto, ON, focused on creating interactive web experiences and modern animations."
+    />
+    <meta property="twitter:url" content="https://www.harrnish.com" />
+    <meta property="twitter:title" content="Harnish Mistry" />
+    <meta
+      property="twitter:description"
+      content="Harnish Mistry is a frontend developer in Toronto, ON, focused on creating interactive web experiences and modern animations."
+    />
   </head>
   <body>
     <div id="root"></div>
